# llm-consistency-study

./: .gitattributes  .gitignore  README.md  analysis_SimpleQA_dataset.ipynb  analysis_math_datasets.ipynb  load_and_save_hf_dataset.py  playground_SimpleQA_grader.py  playground_consistency_analysis.py  pyproject.toml  run.py
analysis_notebooks/: aligned_verdicts_SimpleQA_self_para_v00.pkl  aligned_verdicts_TruthfulQA.pkl  aligned_verdicts_math_500_test.pkl  analysis_utils.py  analysis_v1_SimpleQA_dataset.ipynb  analysis_v1_SimpleQA_dataset_self_para.ipynb  analysis_v1_TruthfulQA_dataset.ipynb  analysis_v1_math500_dataset.ipynb  analysis_v1_math_gsm8k_dataset.ipynb
datasets/: HuggingFaceH4_aime_2024_train.csv
jobs/: run_answer_generation_job.sh  run_consistency_job.sh  run_paraphraser_job.sh
src/llm_consistency/core/: paths.py
src/llm_consistency/data/: schema.py
src/llm_consistency/datasets/: registry.py
src/llm_consistency/evaluators/: __init__.py  base.py  registry.py  simple_qa.py  truthful_qa.py
src/llm_consistency/experiments/: SimpleQA_self_paraphrase_accuracy.py  SimpleQA_self_paraphrase_v00.py  SimpleQA_test1500.py  SimpleQA_v00.py  TruthfulQA_v00.py  gsm8k_test1500.py  gsm8k_test_v00.py  math_500_test_v00.py  run_SimpleQA_test1500.sh
src/llm_consistency/io/: artifacts.py
src/llm_consistency/metrics/: semantic.py
src/llm_consistency/models/: base.py  factory.py  hf_local.py  openai_api.py  vllm_local.py
src/llm_consistency/pipeline/: answer_generation.py  answer_generation_with_mitigate.py  evaluation.py  paraphrase.py
(+9 files in other folders)
