[project]
name = "llm-consistency-empirical-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "jinja2>=3.1.6",
    "math-verify>=0.8.0",
    "matplotlib>=3.10.7",
    "meta>=1.0.2",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "protobuf>=6.33.1",
    "pyarrow>=21.0.0",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "transformers>=4.56.2",
    "torch>=2.4.0",
    "vllm==0.10.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.setuptools.packages.find]
where = ["src"]
